# unicode-icons

./: Cargo.toml  README.md
.github/workflows/: crates.yml  format_and_push.yml
examples/: main.rs
scripts/: readme.md
src/: lib.rs
src/icons/: activities.rs  animals_and_nature.rs  checkmarks.rs  component.rs  copyright.rs  flags.rs  food_and_drink.rs  mod.rs  objects.rs  people_and_body.rs  punctuation.rs  smileys_and_emotion.rs  symbols.rs  travel_and_places.rs
