[package]
name = "unicode-icons"
version = "0.1.2"
edition = "2021"
authors = ["Arteii <ben.arteii@proton.me>"]
license-file = "LICENSE.md"
readme = "README.md"
categories = ["command-line-utilities", "command-line-interface"]

description = "list of unicode icons in rust"
repository = "https://github.com/Arteiii/unicode-icons"
keywords = ["console", "unicode", "icons"]
homepage = "https://arteiii.github.io"


[dependencies]
