[package]
name = "unicode-icons"
version = "1.0.1"
edition = "2021"
authors = ["Arteii <ben.arteii@proton.me>"]
license-file = "LICENSE.md"
readme = "README.md"
categories = ["command-line-utilities", "command-line-interface"]

description = "(1869+) unicode icons in rust"
repository = "https://github.com/Arteiii/unicode-icons"
keywords = ["console", "unicode", "icons"]
homepage = "https://arteiii.github.io"


[dependencies]


[features]
activities = []
animals_and_nature = []
component = []
flags = []
food_and_drink = []
objects = []
people_and_body = []
smileys_and_emotion = []
symbols = []
travel_and_places = []
